[gd_scene load_steps=10 format=3 uid="uid://bflvswdqj83bm"]

[ext_resource type="PackedScene" uid="uid://brndjrek6503t" path="res://lobby/lobby.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dobk0jx1qg1ms" path="res://managers/game_manager.tscn" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://drpavi5u6gfbb" path="res://main.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://bvkd61dv1c4my" path="res://levels/level_01.tscn" id="3_lquwl"]

[sub_resource type="FontFile" id="1"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="2"]
resource_name = "transit"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Joining server", "Joining server.", "Joining server..", "Joining server...
"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2yge"]
_data = {
&"transit": SubResource("2")
}

[sub_resource type="BoxMesh" id="3"]

[sub_resource type="BoxShape3D" id="4"]

[node name="Main" type="Node"]
script = ExtResource("3")
game_manager_scene = ExtResource("2_1bvp3")
first_level_scene = ExtResource("3_lquwl")

[node name="Lobby" parent="." instance=ExtResource("1")]
grow_horizontal = 2
grow_vertical = 2

[node name="Transition" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Transition"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="Label" type="Label" parent="Transition"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -28.5
offset_right = 168.5
offset_bottom = 28.5
theme_override_fonts/font = SubResource("1")
text = "Joining server"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
libraries = {
&"": SubResource("AnimationLibrary_h2yge")
}

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
visible = false
mesh = SubResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
visible = false
shape = SubResource("4")

[node name="GameManagerContainer" type="Node" parent="."]

[node name="LevelContainer" type="Node2D" parent="."]

[node name="PlayerList" type="Node2D" parent="."]
